fix : layout - footer not showing problem

--- a/src/app/style.module.scss
+++ b/src/app/style.module.scss
@@ -3,6 +3,7 @@
 .layout_container {
   display: flex;
   flex-direction: column;
+  min-height: 100%;
 }
 
 .wrapper {
